...
                        Image(systemName: "\(transactionsFilter.count).circle.fill")
                            .font(.caption2)
                            .padding(.paddingCircleButtonSmall)
                    }
                }
        }
        .accessibilityIdentifier("DashboardView.FilterTransactionsButton")
    }
    
    @ViewBuilder func TimeFrameButton() -> some View {
        HStack(spacing: 0) {
            DecrementTimeFrameButton()
            Button {
...
                    Circle()
                        .foregroundStyle(Color.text)
                        .shadow(color: Color.background, radius: .padding)
                }
        }
        .padding()
        .accessibilityIdentifier("DashboardView.AddTransactionButton")
    }
    
    @ViewBuilder func Chart() -> some View {
        Section {
            HStack {
                Spacer(minLength: 0)
...
