...
                    Image(systemName: "plus")
                        .font(.headline)
                        .foregroundStyle(Color.appBackground)
                        .frame(width: 48, height: 48)
                        .background { Circle().foregroundStyle(Color.brandTeal) }
                }
                .accessibilityIdentifier("EditTransactionView.TagsField.SaveNewTagButton")
            }
        }
    }

    @ViewBuilder private func TagFlow() -> some View {
        if allTags.isEmpty {
...
