...

    @ViewBuilder private func TagsField() -> some View {
        VStack(spacing: .paddingSmall) {
            EntryRow("Include Tags", systemName: "tag", tint: .brandTeal) {
                TransactionTagPickerView(budget: budget) { transactionsFilter.whitelistedTags.insert($0) }
            }
            .accessibilityIdentifier("TransactionsFilterMenu.TagsIncludeFieldButton")
            ForEach(transactionsFilter.whitelistedTags.sorted { $0.value < $1.value }) { tag in
                TagChip(tag, tint: .brandTeal) { _ = transactionsFilter.whitelistedTags.remove(tag) }
            }
            EntryRow("Exclude Tags", systemName: "tag", tint: .negative) {
                TransactionTagPickerView(budget: budget) { transactionsFilter.blacklistedTags.insert($0) }
            }
...
