...
                        .foregroundStyle(Color.text)
                        .shadow(color: Color.background, radius: .padding)
                }
        }
        .opacity(mode == .pickerAndEditor && isEditing == false ? 1 : 0)
        .padding()
        .accessibilityIdentifier("TransactionCategoryPickerView.AddCategoryButton")
    }
    
    @ViewBuilder func SearchArea() -> some View {
        SearchBar(
            prompt: String(localized: "Search for a category"),
            searchText: $searchText,
...
